Geoffrey is here

--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
         </div>
 
         <div class="col-sm-4 team-member">
-            <img class="team-member-pic" src="assets/images/execs/rosie.png">
+            <img class="team-member-pic" src="assets/images/execs/duc.png">
             <div class="team-member-text">
                 <h4 class="team-member-position light">Vice President</h4>
-                <h5 class="bold">Rosalie</h5>
+                <h5 class="bold">Duc</h5>
                 <!-- <p class="light">The brains behind the brains</p> -->
                 <!-- <a href="http://www.twitter.com"><img class="team-social-icon" src="assets/images/team-twitter.svg"></a>
                 <a href="http://www.facebook.com"><img class="team-social-icon"
@@ -193,10 +193,10 @@
         </div>
 
         <div class="col-sm-4 team-member">
-            <img class="team-member-pic" src="assets/images/execs/duc.png">
+            <img class="team-member-pic" src="assets/images/execs/geoffrey.png">
             <div class="team-member-text">
                 <h4 class="team-member-position light">Events</h4>
-                <h5 class="bold">Duc</h5>
+                <h5 class="bold">Geoffrey</h5>
                 <!-- <p class="light">The one that puts it all together</p> -->
                 <!-- <a href="http://www.twitter.com"><img class="team-social-icon" src="assets/images/team-twitter.svg"></a>
                 <a href="http://www.facebook.com"><img class="team-social-icon"
