Instaniate games.json, loadgames.js, tesgames.html

--- a/testgames.html
+++ b/testgames.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
 
@@ -153,5 +152,6 @@
             <p>© UTS Playmakers 2020</p>
         </div>
     </div>
+    <script src="./assets/js/loadgames.js"></script>
 </body>
 </html>
