Render function outline

--- a/testgames.html
+++ b/testgames.html
@@ -31,10 +31,13 @@
             <!-- <p>Description</p> -->
         </div>
 
-        <h2><a href="https://itch.io/jam/monthly-jam-march-2020" target="_blank">Monthly Jam (27 - 29 Mar 2020)</a></h2>
+        <section id="game-jams">
+
+        </section>
+
+        <!-- <h2><a href="https://itch.io/jam/monthly-jam-march-2020" target="_blank">Monthly Jam (27 - 29 Mar 2020)</a></h2>
         <p class="theme-desc">Theme: Liquid / Rare / Motivation / Ritzy </p>
         <p class="desc">In the first of our monthly game jams held <a href="https://discord.gg/UQzHyH" target="_blank">on our Discord</a>, our gamedevs compete to make the best game out of four randomly generated words!</p>
-        <!-- Portfolio Gallery Grid -->
         <div class="row">
             <div class="column">
                 <div class="content">
@@ -67,7 +70,6 @@
         <h2><a href="https://itch.io/jam/social-distancing" target="_blank">Social Distancing Jam (17 - 22 Mar 2020)</a></h2>
         <p class="theme-desc">Theme: Toilet Paper</p>
         <p class="desc">An impromptu, casual jam hosted <a href="https://discord.gg/UQzHyH" target="_blank">on our Discord</a> at the beginning of COVID-19 quarantine period, with a very topical theme!</p>
-        <!-- Portfolio Gallery Grid -->
         <div class="row">
             <div class="column">
                 <div class="content">
@@ -95,15 +97,14 @@
                 <div class="content">
                     <iframe src="https://itch.io/embed/592146" class="game-iframe"><a href="https://rose-tropea.itch.io/toilet-paper-run">
                         Toilet Paper Run by rose_tropea</a></iframe>
-                    <!-- <a class="tiny-link" href="https://cazzerty.itch.io/curiosity2">Direct link</a> -->
-                    <!-- <h3>My Work</h3>
-                    <p>Lorem ipsum..</p> -->
+                    <a class="tiny-link" href="https://cazzerty.itch.io/curiosity2">Direct link</a>
+                     <h3>My Work</h3>
+                    <p>Lorem ipsum..</p> 
                 </div>
             </div>
         </div>
         
         <h2><a href="https://itch.io/jam/interactive-media-jam" target="_blank">Interactive Media Jam (27 - 29 Jul 2019)</a></h2>
-        <!-- Portfolio Gallery Grid -->
         <p class="theme-desc">Theme: Merging the Physical and Digital</p>
         <p class="desc"><a href="http://www.gamesstudio.org/articles/interactivity-jam-2019" target="_blank">Our first Interactive Media jam</a> - branching beyond games to showcase a variety of VR, AR, and Arduino based experiences in the submissions.</p>
         <div class="row">
@@ -143,7 +144,7 @@
                     </a></iframe>
                 </div>
             </div>
-        </div>
+        </div> -->
 
 
 
@@ -152,6 +153,7 @@
             <p>© UTS Playmakers 2020</p>
         </div>
     </div>
+    <script src="./assets/data/games.js"></script>
     <script src="./assets/js/loadgames.js"></script>
 </body>
 </html>
