Render header and paragraph elements

--- a/testgames.html
+++ b/testgames.html
@@ -153,7 +153,7 @@
             <p>© UTS Playmakers 2020</p>
         </div>
     </div>
-    <script src="./assets/data/games.js"></script>
+    <script src="./assets/data/gameJamData.js"></script>
     <script src="./assets/js/loadgames.js"></script>
 </body>
 </html>
