--- a/games.html
+++ b/games.html
@@ -4,7 +4,9 @@
 		<meta charset="UTF-8" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Playmakers</title>
+		<div>
+			<title>Playmakers</title>
+		</div>
 		<meta name="Nova theme" content="width=device-width, initial-scale=1" />
 		<link
 			rel="shortcut icon"
