--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 
 <head>
     <meta charset="UTF-8">
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Playmakers</title>
     <meta name="Nova theme" content="width=device-width, initial-scale=1">
@@ -25,9 +24,9 @@
 <!-- Navigation
     ================================================== -->
 <div class="hero-background">
-    <!-- <div>
+    <div>
         <img class="strips" src="assets/images/strips.png">
-    </div> -->
+    </div>
     <div class="container">
         <div class="header-container header">
             <a class="navbar-brand logo" href="#"> <img class="logo" style="max-width:300%" src="assets/images/logo.svg"/></a>
@@ -38,10 +37,12 @@
                 <a class="navbar-item" href="#events">Events</a>
                 <a class="navbar-item" href="#games">Games</a>
                 <a class="navbar-item" href="#team">Team</a>
+                <a class="navbar-item" href="#blog">Blog</a>
             </div>
         </div>
         <!--navigation-->
 
+<!--white-section-text-section--->
 
         <!-- Hero-Section
           ================================================== -->
@@ -60,7 +61,7 @@
                 <!-- <img class="fragmented-background" src="assets/images/fragmented-background.svg"/> -->
             </div>
 
-            <div><img class="mouse" src="assets/images/mouse.svg"/></div>
+            <!-- <div><img class="mouse" src="assets/images/mouse.svg"/></div> -->
 
         </div><!--hero-->
 
@@ -68,6 +69,25 @@
 
 </div><!--hero-background-->
 
+<!-- Logos
+  ================================================== -->
+
+  <div class="logos-section">
+    <!-- <div>
+        <h4>FOR LATEST UPDATES, FOLLOW US ON SOCIAL MEDIA</h4>
+    </div> -->
+    <div>
+        <a href="https://discord.gg/UQzHyH" class="social-link-txt"> <img class="social-link darken" style="width: 36px"
+                                                        src="assets/images/discord.svg"/> Discord </a>
+        <a href="https://twitter.com/utsplaymakers" class="social-link-txt"> <img class="social-link darken"
+                                                        src="assets/images/twitter.svg"/> Twitter </a>
+        <a href="https://instagram.com/uts_playmakers" class="social-link-txt"> <img class="social-link darken" style="width: 30px"
+                                                        src="assets/images/instagram.svg"/> Instagram </a>
+        <a href="https://www.facebook.com/utsplaymakers" class="social-link-txt"> <img class="social-link darken"
+                src="assets/images/facebook.svg"/> Facebook </a>
+    </div>
+</div>
+<!-- logos-section -->
 
 <!-- White-Section
   ================================================== -->
@@ -94,6 +114,28 @@
     </div>
 </div>
 <!--white-section-text-section--->
+
+<!-- BLOG SECTION HERE -->
+
+  <div id="blog" class="white-section row">
+
+    <div class="imac col-sm-6">
+        <img class="imac-screen img-responsive" src="assets/images/imj_games.png">
+    </div>
+
+    <div class="col-sm-6">
+        <div class="white-section-text">
+
+            <h2 class="imac-section-header light"> Blog </h2>
+            <div class="imac-section-desc">
+                <span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, perspiciatis?</span>
+                <a href="./games.html">
+                    <button class="hero-btn">BLOG</button>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 <!-- Features
@@ -133,27 +175,6 @@
         <button class="hero-btn"> VIEW CALENDAR </button>
     </a>
 </div> <!--features-section-->
-
-<!-- Logos
-  ================================================== -->
-
-<div class="logos-section">
-    <div>
-        <h4>FOR LATEST UPDATES, FOLLOW US ON SOCIAL MEDIA</h4>
-    </div>
-    <div>
-        <a href="https://twitter.com/utsplaymakers" class="social-link-txt"> <img class="social-link darken"
-                                                        src="assets/images/twitter.svg"/> Twitter </a>
-        <a href="https://discord.gg/UQzHyH" class="social-link-txt"> <img class="social-link darken" style="width: 36px"
-                                                        src="assets/images/discord.svg"/> Discord </a>
-        <a href="https://instagram.com/uts_playmakers" class="social-link-txt"> <img class="social-link darken" style="width: 30px"
-                                                        src="assets/images/instagram.svg"/> Instagram </a>
-        <a href="https://www.facebook.com/utsplaymakers" class="social-link-txt"> <img class="social-link darken"
-                src="assets/images/facebook.svg"/> Facebook </a>
-    </div>
-</div>
-<!-- logos-section -->
-
 
 
 <!-- Team
@@ -315,19 +336,22 @@
 
     <div class="container">
         <div class="row">
-
+            <div class="footer-elem-left">
+                <p>© UTS Playmakers 2020</p>	
+            </div>  
             <!-- <div class="col-sm-8 webscope">
                 <span class="webscope-text"> Powered by </span>
                 <a href="https://webscopeapp.com"> <img src="assets/images/webscope.svg"/> </a>
             </div>
             webscope -->
 
-            <div class="col-sm">
+            <div class="col-sm footer-elem-right">
                 <div class="social-links">
                     <a href="https://twitter.com/utsplaymakers"> <img class="social-link"
                                                                     src="assets/images/twitter.svg"/> </a>
-                    <a href="https://discord.gg/UQzHyH"> <img class="social-link" style="width: 36px"
-                                                                    src="assets/images/discord.svg"/> </a>
+                    <a href="https://discord.gg/UQzHyH">
+                        <img class="social-link" style="width: 36px"
+                                                                    src="assets/images/discord.svg"/></a>
                     <a href="https://instagram.com/uts_playmakers"> <img class="social-link" style="width: 30px"
                                                                     src="assets/images/instagram.svg"/> </a>
                     <a href="https://www.facebook.com/utsplaymakers"> <img
@@ -348,6 +372,7 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"
         integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
+
 
 <script src="assets/js/script.js"></script>
 
