--- a/index.html
+++ b/index.html
@@ -9,65 +9,66 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css"/>
+    <link rel="stylesheet" href="assets/css/navbar.css"/>
     <link rel="stylesheet" href="assets/css/responsive.css"/>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
 </head>
 
 <body>
 
-<!-- Navigation
-    ================================================== -->
-<div class="hero-background">
-    <div>
-        <img class="strips" src="assets/images/strips.png">
-    </div>
-    <div class="container">
-        <div class="header-container header">
-            <a class="navbar-brand logo" href="#"> <img class="logo" style="max-width:300%" src="assets/images/logo.svg"/></a>
-            <!-- <a href="#email-form">
-                <button class="header-btn">JOIN US!</button>
-            </a> -->
-            <div class="header-right">
-                <a class="navbar-item" href="#events">Events</a>
-                <a class="navbar-item" href="#games">Games</a>
-                <a class="navbar-item" href="#team">Team</a>
-                <a class="navbar-item" href="#blog">Blog</a>
+    <!-- Navigation
+        ================================================== -->
+    <div class="hero-background">
+        <div>
+            <img class="strips" src="assets/images/strips.png">
+        </div>
+        <div class="navbar" id="navbar">
+            <div class="header">
+                <a class="logo" href="#"> <img style="max-width:250%" src="assets/images/logo.svg"/></a>
+                <div class="header-right">
+                    <a class="navbar-item" href="./calendar.html">Events</a>
+                    <a class="navbar-item" href="./games.html">Games</a>
+                    <a class="navbar-item" href="./blog.html">Blog</a>
+                    <!-- <a class="navbar-item" href="#team">Team</a> -->
+                </div> 
             </div>
         </div>
-        <!--navigation-->
-
-<!--white-section-text-section--->
+        <div class="hero-container">
+            <!--navigation-->
+        <!--white-section-text-section--->
 
         <!-- Hero-Section
           ================================================== -->
 
         <div class="hero row">
-            <div class="hero-right col-sm-5">
+
+            <div class="hero-column hc-left">
                 <h1 class="header-headline bold"> Welcome to Playmakers <br></h1>
-                <h4 class="header-running-text light"> A society of interaction and game designers at UTS. </h4>
+                <h4 class="header-running-text light"> A society made by and for interaction and game designers at UTS. </h4>
                 <a href="https://activateuts.com.au/clubs/playmakers">
                     <button class="hero-btn"> JOIN US! </button>
                 </a>
             </div><!--hero-left-->
 
-            <div class="col-sm-6 col-sm-6">
-                <img class="ipad-screen" src="assets/images/playmakers_graphics.svg"/>
-                <!-- <img class="fragmented-background" src="assets/images/fragmented-background.svg"/> -->
+            <div class="hero-column hc-mid">
+                <img class="ipad-screen" src="assets/images/ppchan.png"/> 
             </div>
 
-            <!-- <div><img class="mouse" src="assets/images/mouse.svg"/></div> -->
+            <div class="hero-column hc-right">
+                <iframe src="https://discordapp.com/widget?id=535303014752452618&theme=dark" style="width: 100%; min-height: 400px;" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+            </div>
 
         </div><!--hero-->
 
-    </div> <!--hero-container-->
+        </div> <!--hero-container-->
 
-</div><!--hero-background-->
+    </div><!--hero-background-->
 
 <!-- Logos
   ================================================== -->
@@ -77,13 +78,13 @@
         <h4>FOR LATEST UPDATES, FOLLOW US ON SOCIAL MEDIA</h4>
     </div> -->
     <div>
-        <a href="https://discord.gg/UQzHyH" class="social-link-txt"> <img class="social-link darken" style="width: 36px"
+        <a href="https://discord.gg/UQzHyH" class="social-link-txt"> <img class="social-link" style="width: 36px"
                                                         src="assets/images/discord.svg"/> Discord </a>
-        <a href="https://twitter.com/utsplaymakers" class="social-link-txt"> <img class="social-link darken"
+        <a href="https://twitter.com/utsplaymakers" class="social-link-txt"> <img class="social-link"
                                                         src="assets/images/twitter.svg"/> Twitter </a>
-        <a href="https://instagram.com/uts_playmakers" class="social-link-txt"> <img class="social-link darken" style="width: 30px"
+        <a href="https://instagram.com/uts_playmakers" class="social-link-txt"> <img class="social-link" style="width: 30px"
                                                         src="assets/images/instagram.svg"/> Instagram </a>
-        <a href="https://www.facebook.com/utsplaymakers" class="social-link-txt"> <img class="social-link darken"
+        <a href="https://www.facebook.com/utsplaymakers" class="social-link-txt"> <img class="social-link"
                 src="assets/images/facebook.svg"/> Facebook </a>
     </div>
 </div>
@@ -126,156 +127,18 @@
     <div class="col-sm-6">
         <div class="white-section-text">
 
-            <h2 class="imac-section-header light"> Blog </h2>
+            <h2 class="imac-section-header light"> BLOG </h2>
             <div class="imac-section-desc">
-                <span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, perspiciatis?</span>
-                <a href="./games.html">
-                    <button class="hero-btn">BLOG</button>
+                <span> Events, devlogs, news, jobs. All can be found right here in our blog section. </span><br>
+
+                <a href="./blog.html">
+                    <button class="hero-btn"> VIEW BLOG </button>
                 </a>
             </div>
         </div>
     </div>
 </div>
 
-
-<!-- Features
-  ================================================== -->
-
-<div id="events" class="features-section secondary-background">
-
-    <div class="features-container row">
-
-        <h2 class="features-headline light">EVENTS</h2>
-
-        <div class="col-sm-4 feature">
-            <div class="feature-icon feature-no-display">
-                <img class="feature-img" src="assets/images/responsive.svg">
-            </div>
-            <h5 class="feature-head-text feature-no-display"> WEEKLY CHALLENGE </h5>
-            <p class="feature-subtext light feature-no-display"> Every Friday, we will meet on Discord, hang out, discuss and play games. <br><br>We'll also run a weekly challenge - any creative outlet welcome - with a different topic every week, starting 31 Apr.</p>
-        </div>
-
-        <div class="col-sm-4 feature">
-            <div class="feature-icon feature-no-display feature-display-mid">
-                <img class="feature-img" src="assets/images/customizable.svg">
-            </div>
-            <h5 class="feature-head-text feature-no-display feature-display-mid"> WORKSHOPS </h5>
-            <p class="feature-subtext light feature-no-display feature-display-mid"> Every month, learn ins and outs of interaction and games design with hands-on workshops.<br><br>23 Mar: Game Programming<br>13 Apr: UX Design<br>11 May: Game Design</p>
-        </div>
-
-        <div class="col-sm-4 feature">
-            <div class="feature-icon feature-no-display feature-display-last">
-                <img class="bullet-img" src="assets/images/design.svg">
-            </div>
-            <h5 class="feature-head-text feature-no-display feature-display-last"> HACKATHONS </h5>
-            <p class="feature-subtext light feature-no-display feature-display-last"> Monthly hackathons over the weekend with attractive prizes, each with a unique theme. <br><br> 27 - 29 Mar: Game Jam <br> 24 - 26 Apr: UX Competition <br> 22 - 24 May: Game Jam </p>
-        </div>
-    </div> <!--features-container-->
-    <a href="./calendar.html" target="_blank">
-        <button class="hero-btn"> VIEW CALENDAR </button>
-    </a>
-</div> <!--features-section-->
-
-
-<!-- Team
-  ================================================== -->
-
-<div id="team" class="team">
-    <h2 class="team-section-header light text-center">THE TEAM</h2>
-
-    <div class="team-container row">
-
-        <div class="col-sm-4 team-member">
-            <img class="team-member-pic" src="assets/images/execs/ed.png">
-            <div class="team-member-text">
-                <h4 class="team-member-position light">President</h4>
-                <h5 class="bold">Edward</h5>
-                <!-- <p class="light">The brains behind the whole operation</p> -->
-                <!-- <a href="http://www.twitter.com"><img class="team-social-icon" src="assets/images/team-twitter.svg"></a>
-                <a href="http://www.facebook.com"><img class="team-social-icon"
-                                                       src="assets/images/team-facebook.svg"></a>
-                <a href="https://plus.google.com/"><img class="team-social-icon"
-                                                        src="assets/images/team-google.svg"></a> -->
-            </div>
-        </div>
-
-        <div class="col-sm-4 team-member">
-            <img class="team-member-pic" src="assets/images/execs/duc.png">
-            <div class="team-member-text">
-                <h4 class="team-member-position light">Vice President</h4>
-                <h5 class="bold">Duc</h5>
-                <!-- <p class="light">The brains behind the brains</p> -->
-                <!-- <a href="http://www.twitter.com"><img class="team-social-icon" src="assets/images/team-twitter.svg"></a>
-                <a href="http://www.facebook.com"><img class="team-social-icon"
-                                                       src="assets/images/team-facebook.svg"></a>
-                <a href="https://plus.google.com/"><img class="team-social-icon"
-                                                        src="assets/images/team-google.svg"></a> -->
-            </div>
-        </div>
-
-        <div class="col-sm-4 team-member">
-            <img class="team-member-pic" src="assets/images/execs/geoffrey.png">
-            <div class="team-member-text">
-                <h4 class="team-member-position light">Events</h4>
-                <h5 class="bold">Geoffrey</h5>
-                <!-- <p class="light">The one that puts it all together</p> -->
-                <!-- <a href="http://www.twitter.com"><img class="team-social-icon" src="assets/images/team-twitter.svg"></a>
-                <a href="http://www.facebook.com"><img class="team-social-icon"
-                                                       src="assets/images/team-facebook.svg"></a>
-                <a href="https://plus.google.com/"><img class="team-social-icon"
-                                                        src="assets/images/team-google.svg"></a> -->
-            </div>
-        </div>
-
-        <div class="col-sm-4 team-member">
-            <img class="team-member-pic" src="assets/images/execs/jordan.png">
-            <div class="team-member-text">
-                <h4 class="team-member-position light">Treasurer</h4>
-                <h5 class="bold">Jordan</h5>
-                <!-- <p class="light">The guy with his hand on the wallet</p> -->
-                <!-- <a href="http://www.twitter.com"><img class="team-social-icon" src="assets/images/team-twitter.svg"></a>
-                <a href="http://www.facebook.com"><img class="team-social-icon"
-                                                       src="assets/images/team-facebook.svg"></a>
-                <a href="https://plus.google.com/"><img class="team-social-icon"
-                                                        src="assets/images/team-google.svg"></a> -->
-            </div>
-
-        </div>
-
-        <div class="col-sm-4 team-member">
-            <img class="team-member-pic" src="assets/images/execs/jasmeet.png">
-            <div class="team-member-text">
-                <h4 class="team-member-position light">Secretary</h4>
-                <h5 class="bold">Jasmeet</h5>
-                <!-- <p class="light">The one who speaks to the people</p> -->
-                <!-- <a href="http://www.twitter.com"><img class="team-social-icon" src="assets/images/team-twitter.svg"></a>
-                <a href="http://www.facebook.com"><img class="team-social-icon"
-                                                       src="assets/images/team-facebook.svg"></a>
-                <a href="https://plus.google.com/"><img class="team-social-icon"
-                                                        src="assets/images/team-google.svg"></a> -->
-            </div>
-
-        </div>
-
-        <div class="col-sm-4 team-member">
-            <img class="team-member-pic" src="assets/images/execs/steve.png">
-            <div class="team-member-text">
-                <h4 class="team-member-position light">Marketing</h4>
-                <h5 class="bold">Stephen</h5>
-                <!-- <p class="light">The number one hypeman</p> -->
-                <!-- <a href="http://www.twitter.com"><img class="team-social-icon" src="assets/images/team-twitter.svg"></a>
-                <a href="http://www.facebook.com"><img class="team-social-icon"
-                                                       src="assets/images/team-facebook.svg"></a>
-                <a href="https://plus.google.com/"><img class="team-social-icon"
-                                                        src="assets/images/team-google.svg"></a> -->
-            </div>
-
-        </div>
-        <!-- .row -->
-
-    </div> <!--team-container--->
-
-</div> <!--team-section--->
 
 <!-- Email-Section
   ================================================== -->
@@ -325,56 +188,47 @@
     <!--email-form-div-->
 
     <div id="newsletter-loading-div"></div>
-    <!--email-form-->
-</div>
-<!--blue-section-->
-
-<!-- Footer
-  ================================================== -->
-
-<div class="footer">
-
-    <div class="container">
-        <div class="row">
-            <div class="footer-elem-left">
-                <p>© UTS Playmakers 2020</p>	
-            </div>  
-            <!-- <div class="col-sm-8 webscope">
-                <span class="webscope-text"> Powered by </span>
-                <a href="https://webscopeapp.com"> <img src="assets/images/webscope.svg"/> </a>
-            </div>
-            webscope -->
-
-            <div class="col-sm footer-elem-right">
-                <div class="social-links">
-                    <a href="https://twitter.com/utsplaymakers"> <img class="social-link"
-                                                                    src="assets/images/twitter.svg"/> </a>
-                    <a href="https://discord.gg/UQzHyH">
-                        <img class="social-link" style="width: 36px"
-                                                                    src="assets/images/discord.svg"/></a>
-                    <a href="https://instagram.com/uts_playmakers"> <img class="social-link" style="width: 30px"
-                                                                    src="assets/images/instagram.svg"/> </a>
-                    <a href="https://www.facebook.com/utsplaymakers"> <img
-                            src="assets/images/facebook.svg"/> </a>
-                </div>
-                <!--social-links-->
-            </div>
-            <!--social-links-parent-->
-
-        </div>
-        <!--row-->
-
+        <!--email-form-->
     </div>
-    <!--container-->
-</div>
-<!--footer-->
+    <!--blue-section-->
 
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"
-        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-        crossorigin="anonymous"></script>
+    <!-- Footer
+    ================================================== -->
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-elem-left">
+                    <p>© UTS Playmakers 2020</p>	
+                </div>
+                <div class="col-sm footer-elem-right">
+                    <div class="social-links">
+                        <a href="https://twitter.com/utsplaymakers"> <img class="social-link"
+                                                                        src="assets/images/twitter.svg"/> </a>
+                        <a href="https://discord.gg/UQzHyH">
+                            <img class="social-link" style="width: 36px"
+                                                                        src="assets/images/discord.svg"/></a>
+                        <a href="https://instagram.com/uts_playmakers"> <img class="social-link" style="width: 30px"
+                                                                        src="assets/images/instagram.svg"/> </a>
+                        <a href="https://www.facebook.com/utsplaymakers"> <img
+                                src="assets/images/facebook.svg"/> </a>
+                    </div>
+                    <!--social-links-->
+                </div>
+                <!--social-links-parent-->
+            </div>
+            <!--row-->
+        </div>
+        <!--container-->
+    </div>
+    <!--footer-->
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+            crossorigin="anonymous"></script>
 
 
-<script src="assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
+    <script src="assets/js/navbar.js"></script>
 
 </body>
 
