--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
                 <a href="https://activateuts.com.au/clubs/playmakers">
                     <button class="hero-btn"> JOIN US! </button>
                 </a>
+                <a href="./calendar.html">
+                    <button class="hero-btn" style="color: black; background-color: #e49885"> WHAT DO WE DO? </button>
+                </a>
+                
             </div><!--hero-left-->
 
             <div class="hero-column hc-mid">
@@ -78,13 +82,13 @@
     </div> -->
     <div>
         <a href="https://discord.gg/UQzHyH" class="social-link-txt"> <img class="social-link" style="width: 36px"
-                                                        src="assets/images/discord.svg"/> Discord </a>
+                                                        src="assets/images/discord.svg"/>Discord</a>
         <a href="https://twitter.com/utsplaymakers" class="social-link-txt"> <img class="social-link"
-                                                        src="assets/images/twitter.svg"/> Twitter </a>
+                                                        src="assets/images/twitter.svg"/>Twitter</a>
         <a href="https://instagram.com/uts_playmakers" class="social-link-txt"> <img class="social-link" style="width: 30px"
-                                                        src="assets/images/instagram.svg"/> Instagram </a>
+                                                        src="assets/images/instagram.svg"/>Instagram</a>
         <a href="https://www.facebook.com/utsplaymakers" class="social-link-txt"> <img class="social-link"
-                src="assets/images/facebook.svg"/> Facebook </a>
+                src="assets/images/facebook.svg"/>Facebook</a>
     </div>
 </div>
 <!-- logos-section -->
@@ -120,7 +124,7 @@
   <div id="blog" class="white-section row">
 
     <div class="imac col-sm-6">
-        <img class="imac-screen img-responsive" src="assets/images/imj_games.png">
+        <img class="imac-screen img-responsive" src="assets/images/playmakers_graphics.svg">
     </div>
 
     <div class="col-sm-6">
