Blog entry formatting

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div><!--hero-left-->
 
             <div class="hero-column hc-mid">
-                <img class="ipad-screen" src="assets/images/ppchan.png"/> 
+                <img class="ipad-screen" src="assets/images/favicon.png"/> 
             </div>
 
             <div class="hero-column hc-right">
