--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,6 @@
     <link rel="stylesheet" href="assets/css/portfolio.css"/>
     <link rel="stylesheet" href="assets/css/responsive.css"/>
 
-
     <link rel="stylesheet" href="./assets/css/blog.css">
 
 
@@ -48,7 +47,7 @@
                     <p>AUTHOR</p>
                 </div> -->
                 <div class="blog-preview-content">
-                    <a href="lol"> <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fcdn1.theweek.co.uk%2Fsites%2Ftheweek%2Ffiles%2F2018%2F09%2F070918-wd-fat-cat.jpg&f=1&nofb=1" style="width: 80%;" alt="fat cat"></a>
+                    <a href="lol"> <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fcdn1.theweek.co.uk%2Fsites%2Ftheweek%2Ffiles%2F2018%2F09%2F070918-wd-fat-cat.jpg&f=1&nofb=1" alt="fat cat"></a>
                     <p class="desc-text">Mr. Fat Cat is sad that we haven't finished our blog features... Please join the society so we can have money to feed him.</p>
                 </div>
             </div>
