Update discord invite link

--- a/games.html
+++ b/games.html
@@ -70,7 +70,7 @@
 							<div class="social-links">
 								<a href="https://twitter.com/utsplaymakers"> <img class="social-link"
 																				src="assets/images/twitter.svg"/> </a>
-								<a href="https://discord.gg/UQzHyH">
+								<a href="https://discord.gg/edUpKmN">
 									<img class="social-link" style="width: 36px"
 																				src="assets/images/discord.svg"/></a>
 								<a href="https://instagram.com/uts_playmakers"> <img class="social-link" style="width: 30px"
