--- a/blogentry.html
+++ b/blogentry.html
@@ -77,7 +77,7 @@
                         <a href="https://twitter.com/utsplaymakers">
                             <img class="social-link" src="assets/images/twitter.svg"/>
                         </a>
-                        <a href="https://discord.gg/UQzHyH">
+                        <a href="https://discord.gg/edUpKmN">
                             <img class="social-link" style="width: 36px" src="assets/images/discord.svg"/>
                         </a>    
                         <a href="https://instagram.com/uts_playmakers"> <img class="social-link" style="width: 30px"
