--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <h4>FOR LATEST UPDATES, FOLLOW US ON SOCIAL MEDIA</h4>
     </div> -->
     <div>
-        <a href="https://discord.gg/UQzHyH" class="social-link-txt"> <img class="social-link" style="width: 36px"
+        <a href="https://discord.gg/edUpKmN" class="social-link-txt"> <img class="social-link" style="width: 36px"
                                                         src="assets/images/discord.svg"/>Discord</a>
         <a href="https://twitter.com/utsplaymakers" class="social-link-txt"> <img class="social-link"
                                                         src="assets/images/twitter.svg"/>Twitter</a>
@@ -207,7 +207,7 @@
                     <div class="social-links">
                         <a href="https://twitter.com/utsplaymakers"> <img class="social-link"
                                                                         src="assets/images/twitter.svg"/> </a>
-                        <a href="https://discord.gg/UQzHyH">
+                        <a href="https://discord.gg/edUpKmN">
                             <img class="social-link" style="width: 36px"
                                                                         src="assets/images/discord.svg"/></a>
                         <a href="https://instagram.com/uts_playmakers"> <img class="social-link" style="width: 30px"
