Touch up website

--- a/blog.html
+++ b/blog.html
@@ -32,6 +32,7 @@
 		<link rel="stylesheet" href="assets/css/responsive.css" />
 
 		<link rel="stylesheet" href="./assets/css/blog.css" />
+		<link rel="stylesheet" href="./assets/css/blogpost.css" />
 	</head>
 	<body>
 		<div class="navbar" id="navbar">
@@ -50,33 +51,56 @@
 		<div class="hero-background">
 			<div
 				class="text-center"
-				style="margin-top: 90px; margin-bottom: -50px;"
-			>
+                style="margin-top: 90px; margin-bottom: 50px;"
+            >
 				<h1><b>BLOG</b></h1>
 				<!-- <p>Description</p> -->
 			</div>
-			<div class="hero-container off-white">
-				<div class="blog-preview">
-					<div class="blog-preview-metadata">
-						<p class="blog-preview-metadata-date">25/07/20</p>
-						<p class="blog-preview-metadata-title">
-							Ludonarrative Dissonance
-						</p>
-						<p>Kyle Hammer</p>
-					</div>
-					<div class="blog-preview-content">
-						<a href="#">
-							<img
-								src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fcdn1.theweek.co.uk%2Fsites%2Ftheweek%2Ffiles%2F2018%2F09%2F070918-wd-fat-cat.jpg&f=1&nofb=1"
-								alt="fat cat"
-						/></a>
-						<p class="blog-preview-content-text">
-							perspiciatis quibusdam non veritatis doloremque
-							quisquam. Placeat in voluptas deserunt maiores a
-							cumque culpa ipsum?
-						</p>
-					</div>
-				</div>
+			<div class="off-white">
+                <br><br>
+
+                <a href="./blogentry.html"><div class="blog-preview-container">
+                    <div class="blog-preview-a">
+                        <img class="blog-preview-a-img"
+                            src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fcdn1.theweek.co.uk%2Fsites%2Ftheweek%2Ffiles%2F2018%2F09%2F070918-wd-fat-cat.jpg&f=1&nofb=1"
+                            alt="fat cat"
+                    /></div>
+
+                    <div class="blog-preview-content">
+                        <div class="blog-preview-metadata">
+                            <!-- <p class="blog-preview-metadata-date">25/07/20</p> -->
+                            <p class="blog-preview-metadata-title">
+                                Ludonarrative Dissonance
+                            </p>
+                        </div>
+                        
+                        <p class="blog-preview-content-text">
+                            Kyle from the Playmakers Dev Team talks about the relationship, or lack thereof, between gameplay and story.
+                        </p>
+                    </div>
+                </div></a>
+
+                <a href="./blogentry.html"><div class="blog-preview-container">
+                    <div class="blog-preview-a">
+                        <img class="blog-preview-a-img"
+                            src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fcdn1.theweek.co.uk%2Fsites%2Ftheweek%2Ffiles%2F2018%2F09%2F070918-wd-fat-cat.jpg&f=1&nofb=1"
+                            alt="fat cat"
+                    /></div>
+
+                    <div class="blog-preview-content">
+                        <div class="blog-preview-metadata">
+                            <!-- <p class="blog-preview-metadata-date">25/07/20</p> -->
+                            <p class="blog-preview-metadata-title">
+                                Our own Podcast channel!
+                            </p>
+                            <!-- <p>Kyle Hammer</p> -->
+                        </div>
+                        
+                        <p class="blog-preview-content-text">
+                            Every Friday, we meet on Discord to discuss game design in popular games. The result is our own podcast: Talking About Play.
+                        </p>
+                    </div>  
+                </div></a>
 			</div>
 		</div>
 
