--- a/blogentry.html
+++ b/blogentry.html
@@ -41,7 +41,7 @@
 			<div class="blogpost-container off-white">
 				<div class="blogpost-text-container">
 					<br>
-					<h1>Blog title</h1>
+					<h1 class="title">Blog title</h1>
 					<p class="authortext">Blog author | Date time</p>
 					<br>
 					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora dolores odio iusto commodi earum! Distinctio cum ut excepturi fugiat quia!</p>
