--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Navigation
         ================================================== -->
-    <div class="hero-background">
+    <div class="hero-background" style="max-height: 620px">
         <div>
             <img class="strips" src="assets/images/strips.png">
         </div>
@@ -110,6 +110,7 @@
 
             <div class="imac-section-desc">
                 <span> Play awesome games from talented students participating in our game jams! </span>
+                <br><br>
                 <a href="./games.html">
                     <button class="hero-btn"> VIEW GAMES </button>
                 </a>
@@ -123,8 +124,8 @@
 
   <div id="blog" class="white-section row">
 
-    <div class="imac col-sm-6">
-        <img class="imac-screen img-responsive" src="assets/images/playmakers_graphics.svg">
+    <div class="imac col-sm-6 align-right">
+        <img class="imac-screen img-responsive" src="assets/images/playmakers_graphics.png">
     </div>
 
     <div class="col-sm-6">
@@ -132,7 +133,7 @@
 
             <h2 class="imac-section-header light"> BLOG </h2>
             <div class="imac-section-desc">
-                <span> Events, devlogs, news, jobs. All can be found right here in our blog section. </span><br>
+                <span> Events, devlogs, news, jobs. All can be found right here in our blog section. </span><br><br>
 
                 <a href="./blog.html">
                     <button class="hero-btn"> VIEW BLOG </button>
@@ -140,6 +141,7 @@
             </div>
         </div>
     </div>
+
 </div>
 
 
