--- a/blogposts/blogentry.html
+++ b/blogposts/blogentry.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Playmakers | Blogpost</title>
     <meta name="Nova theme" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="../assets/images/favicon.png"/>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -13,24 +13,24 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css"/>
-    <link rel="stylesheet" href="assets/css/navbar.css"/>
-    <link rel="stylesheet" href="assets/css/portfolio.css"/>
-    <link rel="stylesheet" href="assets/css/responsive.css"/>
+    <link rel="stylesheet" href="../assets/css/style.css"/>
+    <link rel="stylesheet" href="../assets/css/navbar.css"/>
+    <link rel="stylesheet" href="../assets/css/portfolio.css"/>
+    <link rel="stylesheet" href="../assets/css/responsive.css"/>
 
-    <link rel="stylesheet" href="./assets/css/blog.css">
-    <link rel="stylesheet" href="./assets/css/blogpost.css">
+    <link rel="stylesheet" href="../assets/css/blog.css">
+    <link rel="stylesheet" href="../assets/css/blogpost.css">
 
 
 </head>
 <body>
 	<div class="navbar" id="navbar">
         <div class="header">
-            <a class="logo" href="./index.html"> <img style="width:250%" src="assets/images/logo.svg"/></a>
+            <a class="logo" href="../index.html"> <img style="width:250%" src="../assets/images/logo.svg"/></a>
             <div class="header-right">
-                <a class="navbar-item" href="./calendar.html">Events</a>
-                <a class="navbar-item" href="./games.html">Games</a>
-                <a class="navbar-item" href="./blog.html">Blog</a>
+                <a class="navbar-item" href="../calendar.html">Events</a>
+                <a class="navbar-item" href="../games.html">Games</a>
+                <a class="navbar-item" href="../blog.html">Blog</a>
                 <!-- <a class="navbar-item" href="#team">Team</a> -->
             </div> 
         </div>
@@ -75,15 +75,15 @@
                     
                     <div class="social-links footer-elem-right">
                         <a href="https://twitter.com/utsplaymakers">
-                            <img class="social-link" src="assets/images/twitter.svg"/>
+                            <img class="social-link" src="../assets/images/twitter.svg"/>
                         </a>
                         <a href="https://discord.gg/edUpKmN">
-                            <img class="social-link" style="width: 36px" src="assets/images/discord.svg"/>
+                            <img class="social-link" style="width: 36px" src="../assets/images/discord.svg"/>
                         </a>    
                         <a href="https://instagram.com/uts_playmakers"> <img class="social-link" style="width: 30px"
-                                                                        src="assets/images/instagram.svg"/> </a>
+                                                                        src="../assets/images/instagram.svg"/> </a>
                         <a href="https://www.facebook.com/utsplaymakers"> <img
-                                src="assets/images/facebook.svg"/> </a>
+                                src="../assets/images/facebook.svg"/> </a>
                     </div>
                     <!--social-links-->
                 </div>
@@ -96,7 +96,7 @@
         <!--container-->
     </div>
     <!--footer-->
-	<script src="assets/js/navbar.js"></script>
+	<script src="../assets/js/navbar.js"></script>
     
 </body>
 </html>
