Add proper images to blog post

--- a/blog.html
+++ b/blog.html
@@ -62,8 +62,8 @@
                 <a href="./blogposts/how-about-some-change.html"><div class="blog-preview-container">
                     <div class="blog-preview-a">
                         <img class="blog-preview-a-img"
-                            src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fcdn1.theweek.co.uk%2Fsites%2Ftheweek%2Ffiles%2F2018%2F09%2F070918-wd-fat-cat.jpg&f=1&nofb=1"
-                            alt="fat cat"
+                            src="https://lh3.googleusercontent.com/proxy/bqyAWeGrGp0VVRkAdAzX8u3qCbwrd4d50ycevkAxrJLgr_r_YCaihmxcB1n5BqF5pUWkNCofNo5vkgoINEacKiOQdSPF4jbYqgz1ubvUuXq21t0AgDMRKO312ZCJMnt-KBt77u2mFLfkfnD8s2Q"
+                            alt="Change Ahead"
                     /></div>
 
                     <div class="blog-preview-content">
@@ -83,8 +83,8 @@
                 <a href="https://talkingaboutplay.podbean.com/" target="_blank"><div class="blog-preview-container">
                     <div class="blog-preview-a">
                         <img class="blog-preview-a-img"
-                            src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fcdn1.theweek.co.uk%2Fsites%2Ftheweek%2Ffiles%2F2018%2F09%2F070918-wd-fat-cat.jpg&f=1&nofb=1"
-                            alt="fat cat"
+                            src="./assets/images/podcast.png"
+                            alt="Podcast"
                     /></div>
 
                     <div class="blog-preview-content">
