Add podcast to blog

--- a/blog.html
+++ b/blog.html
@@ -59,10 +59,32 @@
 			<div class="off-white">
                 <br><br>
 
+                <a href="./blogposts/tap-1-setting-the-scene.html" target="_blank"><div class="blog-preview-container">
+                    <div class="blog-preview-a">
+                        <img class="blog-preview-a-img"
+                            src="./assets/images/podcast.png"
+                            alt="Podcast"
+                    /></div>
+
+                    <div class="blog-preview-content">
+                        <div class="blog-preview-metadata">
+                            <!-- <p class="blog-preview-metadata-date">25/07/20</p> -->
+                            <p class="blog-preview-metadata-title">
+                                Podcast #1: Setting the Scene
+                                <!-- <img src="./assets/images/open-in-new-tab.png"> -->
+                            </p>
+                        </div>
+                        
+                        <p class="blog-preview-content-text">
+                            Our first podcast is here! It's as if you were there with us at our weekly meetup, where we discussed how to set the scene in your games.
+                        </p>
+                    </div>  
+                </div></a>
+
                 <a href="./blogposts/how-about-some-change.html"><div class="blog-preview-container">
                     <div class="blog-preview-a">
                         <img class="blog-preview-a-img"
-                            src="https://lh3.googleusercontent.com/proxy/bqyAWeGrGp0VVRkAdAzX8u3qCbwrd4d50ycevkAxrJLgr_r_YCaihmxcB1n5BqF5pUWkNCofNo5vkgoINEacKiOQdSPF4jbYqgz1ubvUuXq21t0AgDMRKO312ZCJMnt-KBt77u2mFLfkfnD8s2Q"
+                            src="https://i.ibb.co/3fXk2RF/change-ahead-sign.jpg"
                             alt="Change Ahead"
                     /></div>
 
@@ -70,7 +92,7 @@
                         <div class="blog-preview-metadata">
                             <!-- <p class="blog-preview-metadata-date">25/07/20</p> -->
                             <p class="blog-preview-metadata-title">
-                                How About Some Change?
+                                DEVLOG: How About Some Change?
                             </p>
                         </div>
                         
