--- a/calendar.html
+++ b/calendar.html
@@ -10,7 +10,7 @@
 		<link
 			rel="shortcut icon"
 			type="image/png"
-			href="assets/images/favicon.png"
+			href="./assets/images/favicon.png"
 		/>
 
 		<link
