Update games page styling

--- a/blog.html
+++ b/blog.html
@@ -76,7 +76,7 @@
                         </div>
                         
                         <p class="blog-preview-content-text">
-                            Our first podcast is here! It's as if you were there with us at our weekly meetup, where we discussed how to set the scene in your games.
+                            Our first podcast episode is here! Join us (virtually) at our Discord meetup, where we discussed how to set the scene, mood and atmosphere in your games.
                         </p>
                     </div>  
                 </div></a>
