--- a/games.html
+++ b/games.html
@@ -54,7 +54,7 @@
 		<div class="hero-container">
 			<div class="text-center">
 				<h1><b>GAMES SHOWCASE</b></h1>
-				<!-- <p>Description</p> -->
+				<!-- <p style="color: white">Interactive media created during and for our events!</p> -->
 			</div>
 
 			<section id="game-jams"></section>
