Add Home button to navbar

--- a/games.html
+++ b/games.html
@@ -42,6 +42,7 @@
 				<div class="header">
 					<a class="logo" href="./index.html"> <img style="width:250%" src="assets/images/logo.svg"/></a>
 					<div class="header-right">
+						<a class="navbar-item" href="./index.html">Home</a>
 						<a class="navbar-item" href="./calendar.html">Events</a>
 						<a class="navbar-item" href="./games.html">Games</a>
 						<a class="navbar-item" href="./blog.html">Blog</a>
