--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <div class="header">
                 <a class="logo" href="#"> <img style="max-width:250%" src="assets/images/logo.svg"/></a>
                 <div class="header-right">
+                    <a class="navbar-item" href="./index.html">Home</a>
                     <a class="navbar-item" href="./calendar.html">Events</a>
                     <a class="navbar-item" href="./games.html">Games</a>
                     <a class="navbar-item" href="./blog.html">Blog</a>
