Add podcast 2 and 3 to Blog

--- a/blog.html
+++ b/blog.html
@@ -60,6 +60,50 @@
 			<div class="off-white">
                 <br><br>
 
+                <a href="./blogposts/tap-3-game-bloat.html" target="_blank"><div class="blog-preview-container">
+                    <div class="blog-preview-a">
+                        <img class="blog-preview-a-img"
+                            src="./assets/images/podcast.png"
+                            alt="Podcast"
+                    /></div>
+
+                    <div class="blog-preview-content">
+                        <div class="blog-preview-metadata">
+                            <!-- <p class="blog-preview-metadata-date">25/07/20</p> -->
+                            <p class="blog-preview-metadata-title">
+                                Podcast #3: Game Bloat
+                                <!-- <img src="./assets/images/open-in-new-tab.png"> -->
+                            </p>
+                        </div>
+                        
+                        <p class="blog-preview-content-text">
+                            In this episode of our weekly poscast, we discuss game bloat - how a game can have too many going on at once - and how one can pull back on the rein and recover from bloated design.
+                        </p>
+                    </div>  
+                </div></a>
+
+                <a href="./blogposts/tap-2-game-feel.html" target="_blank"><div class="blog-preview-container">
+                    <div class="blog-preview-a">
+                        <img class="blog-preview-a-img"
+                            src="./assets/images/podcast.png"
+                            alt="Podcast"
+                    /></div>
+
+                    <div class="blog-preview-content">
+                        <div class="blog-preview-metadata">
+                            <!-- <p class="blog-preview-metadata-date">25/07/20</p> -->
+                            <p class="blog-preview-metadata-title">
+                                Podcast #2: Game Feel
+                                <!-- <img src="./assets/images/open-in-new-tab.png"> -->
+                            </p>
+                        </div>
+                        
+                        <p class="blog-preview-content-text">
+                            Our podcast returns with episode 2, all about how game feel (a.k.a game juice) enhances a gaming experience.
+                        </p>
+                    </div>  
+                </div></a>
+
                 <a href="./blogposts/tap-1-setting-the-scene.html" target="_blank"><div class="blog-preview-container">
                     <div class="blog-preview-a">
                         <img class="blog-preview-a-img"
