--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
                 <a class="logo" href="#"> <img style="max-width:250%" src="assets/images/logo.svg"/></a>
                 <div class="header-right">
                     <a class="navbar-item" href="./index.html">Home</a>
-                    <a class="navbar-item" href="./calendar.html">Events</a>
                     <a class="navbar-item" href="./games.html">Games</a>
                     <a class="navbar-item" href="./blog.html">Blog</a>
                     <!-- <a class="navbar-item" href="#team">Team</a> -->
@@ -50,7 +49,7 @@
 
             <div class="hero-column hc-left">
                 <h1 class="header-headline bold"> Welcome to Playmakers <br></h1>
-                <h4 class="header-running-text light"> A society made by and for interaction and game designers at UTS. </h4>
+                <h4 class="header-running-text light"> A society made by and for game designers at UTS. Come join our community at Discord to learn more!</h4>
                 <a href="https://activateuts.com.au/clubs/playmakers">
                     <button class="hero-btn"> JOIN US! </button>
                 </a>
@@ -121,27 +120,6 @@
 </div>
 <!--white-section-text-section--->
 
-<!-- BLOG SECTION HERE -->
-
-  <div id="blog" class="white-section row">
-
-    <div class="imac col-sm-6 align-right">
-        <img class="imac-screen img-responsive" src="assets/images/playmakers_graphics.png">
-    </div>
-
-    <div class="col-sm-6">
-        <div class="white-section-text">
-
-            <h2 class="imac-section-header light"> BLOG </h2>
-            <div class="imac-section-desc">
-                <span> Events, devlogs, news, jobs. All can be found right here in our blog section. </span><br><br>
-
-                <a href="./blog.html">
-                    <button class="hero-btn"> VIEW BLOG </button>
-                </a>
-            </div>
-        </div>
-    </div>
 
 </div>
 
