Deprecate events links and welcome text change

--- a/blog.html
+++ b/blog.html
@@ -42,7 +42,7 @@
 				/></a>
 				<div class="header-right">
                     <a class="navbar-item" href="./index.html">Home</a>
-					<a class="navbar-item" href="./calendar.html">Events</a>
+					<!-- <a class="navbar-item" href="./calendar.html">Events</a> -->
 					<a class="navbar-item" href="./games.html">Games</a>
 					<a class="navbar-item" href="./blog.html">Blog</a>
 					<!-- <a class="navbar-item" href="#team">Team</a> -->
