--- a/games.html
+++ b/games.html
@@ -43,7 +43,7 @@
 					<a class="logo" href="./index.html"> <img style="width:250%" src="assets/images/logo.svg"/></a>
 					<div class="header-right">
 						<a class="navbar-item" href="./index.html">Home</a>
-						<a class="navbar-item" href="./calendar.html">Events</a>
+						<!-- <a class="navbar-item" href="./calendar.html">Events</a> -->
 						<a class="navbar-item" href="./games.html">Games</a>
 						<a class="navbar-item" href="./blog.html">Blog</a>
 						<!-- <a class="navbar-item" href="#team">Team</a> -->
