--- a/index.html
+++ b/index.html
@@ -49,13 +49,16 @@
 
             <div class="hero-column hc-left">
                 <h1 class="header-headline bold"> Welcome to Playmakers <br></h1>
-                <h4 class="header-running-text light"> A society made by and for game designers and game developers at UTS. Come join our community at Discord to learn more!</h4>
+                <h4 class="header-running-text light"> 
+                    <p>A society for game designers and game developers at UTS.</p>
+                    <p>Come join our community at Discord to learn more!</p>
+                </h4>
                 <a href="https://activateuts.com.au/clubs/playmakers">
                     <button class="hero-btn"> JOIN US! </button>
                 </a>
-                <!-- <a href="./calendar.html">
-                    <button class="hero-btn" style="color: black; background-color: #e49885"> WHAT DO WE DO? </button>
-                </a> -->
+                <a href="https://discord.gg/CMD2YPG">
+                    <button class="hero-btn" style="color: black; background-color: #e49885"> COME TO DISCORD! </button>
+                </a>
                 
             </div><!--hero-left-->
 
