I Had some fun with monstermash animations

--- a/monstermash.html
+++ b/monstermash.html
@@ -38,7 +38,7 @@
                 </video>
             </div>
 
-            <div class="video-container">
+            <div id="menu-video-container" class="video-container">
                 <video id="menu-video" preload autoplay muted loop style="pointer-events: none;" disablePictureInPicture>
                     <source src="assets/media/monstermash/uts_broadway.mp4" type="video/mp4">
                     Your browser does not support the video mp4 :(
