--- a/monstermash.html
+++ b/monstermash.html
@@ -29,6 +29,10 @@
 <body>
 
     <div style="position: absolute; width: 100%; height: 100%;">
+
+        <button id="replay-intro" class="btn btn-hide btn-extra mx-1 mt-1">
+            Replay Intro
+        </button>
         
         <div class="d-flex justify-content-center my-5">
             <div class="video-container">
@@ -50,33 +54,37 @@
 
         <div class="container post-video">
 
-            <div class="d-flex justify-content-center">
+            <div class="d-flex justify-content-center undraggable">
                 <img id="menu-title" src="assets/images/monstermash/title.png"/>
             </div>
 
             <div class="row justify-content-around">
 
-                <div class="col-2">
+                <div class="col-md-2 my-2">
                     <button id="week1" class="btn btn-weeks">
-                        <img src="assets/images/monstermash/WEEK1.png"/>
+                        <!-- <img src="assets/images/monstermash/WEEK1.png"/> -->
+                        Event 1
                     </button>
                 </div>
 
-                <div class="col-2">
+                <div class="col-md-2 my-2">
                     <button id="week2" class="btn btn-weeks">
-                        <img src="assets/images/monstermash/WEEK2.png"/>
+                        <!-- <img src="assets/images/monstermash/WEEK2.png"/> -->
+                        Event 2
                     </button>
                 </div>
 
-                <div class="col-2">
+                <div class="col-md-2 my-2">
                     <button id="week3" class="btn btn-weeks">
-                        <img src="assets/images/monstermash/WEEK3.png"/>
+                        <!-- <img src="assets/images/monstermash/WEEK3.png"/> -->
+                        Event 3
                     </button>
                 </div>
 
-                <div class="col-2">
+                <div class="col-md-2 my-2">
                     <button id="week4" class="btn btn-weeks">
-                        <img src="assets/images/monstermash/WEEK4.png"/>
+                        <!-- <img src="assets/images/monstermash/WEEK4.png"/> -->
+                        Event 4
                     </button>
                 </div>
                 
